crates/guardian-macros/tests/ui/fail_invalid_type.stderr
error: Unsupported field type
 --> $DIR/fail_invalid_type.rs:5:5
  |
5 |     invalid: MyCustomType, // This should cause a compilation error
  |     ^^^^^^^^ 